edit aggregate root